# isa-project

./: .gitignore  CHANGELOG.md  CONFORMANCE.md  CONTRIBUTING.md  Cargo.toml  ENHANCEMENTS.md  README.md  ROADMAP.md  SECURITY.md  package.json
audit/: README.md  dependencies.txt
audit/formal-proofs/: verify.rs
audit/test-vectors/: vectors.rs
config-examples/: .env.example  README.md  policies.json  policies.toml  policies.yaml
docs/: ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  MA-ISA-PAPER.md  PAPER.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RECOVERY.md  REFACTORING.md  REFACTOR_SUMMARY.md  SECURITY_GUARANTEES.md  SIMD.md  THEORY_TO_CODE.md  THREAT_MODEL.md  VERIFICATION.md  nestjs-pos-implementation-prompt.md
isa-cli/: Cargo.toml  README.md
isa-cli/src/: main.rs
isa-cli/src/commands/: compare.rs  config.rs  demo.rs  info.rs  init.rs  init_project.rs  install.rs  mod.rs  record.rs  record_sale.rs  show.rs  status.rs  verify.rs
isa-core/: Cargo.toml  README.md
isa-core/benches/: benchmarks.rs
isa-core/examples/: generate_test_vectors.rs
isa-core/src/: axis.rs  compat.rs  dimension.rs  divergence.rs  dynamic.rs  integrity_state.rs  kdf.rs  lib.rs  version.rs
isa-core/src/divergence/: divergence_simd.rs
isa-core/tests/: generate_vectors.rs  vectors.rs
isa-ffi/: Cargo.toml  README.md
isa-ffi/include/: ma_isa.h
isa-ffi/pkg/: isa_ffi.d.ts  isa_ffi.js  isa_ffi_bg.wasm  isa_ffi_bg.wasm.d.ts  package.json
isa-ffi/src/: c_api.rs  error.rs  lib.rs  wasm.rs
isa-merkle/: Cargo.toml  README.md
isa-merkle/benches/: merkle_benchmarks.rs
isa-merkle/src/: lib.rs
isa-runtime/: Cargo.toml  README.md
isa-runtime/examples/: advanced_features.rs  config_driven_policies.rs
isa-runtime/src/: adaptive.rs  config.rs  constraints.rs  device.rs  entropy.rs  hierarchy.rs  lib.rs  persistence.rs  policy.rs  profile.rs  time.rs
isa-runtime/tests/: recovery_tests.rs
web-demo/: .gitignore  README.md  app.js  build-wasm.sh  config.yaml  government.html  government.js  index.html  mobile-money.html  mobile-money.js  visual.html  visual.js
