[workspace]
resolver = "2"
members = [
    "isa-core",
    "isa-runtime",
    "isa-ffi",
    "isa-merkle",
    "isa-cli",
]

[workspace.metadata]
examples = ["basic_usage"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MA-ISA Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mouhamed1296/isa-project"

[workspace.dependencies]
sha2 = { version = "0.10", default-features = false }
blake3 = { version = "1.5", default-features = false }
subtle = { version = "2.5", default-features = false }
zeroize = { version = "1.7", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
bincode = { version = "1.3", default-features = false }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
