[package]
name = "isa-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Platform-aware runtime for MA-ISA with entropy gathering and persistence"
keywords = ["runtime", "entropy", "persistence"]
categories = ["cryptography"]

[dependencies]
isa-core = { path = "../isa-core", features = ["serde"] }
serde = { workspace = true, features = ["std"] }
bincode = { workspace = true }
zeroize = { workspace = true, features = ["std"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
tempfile = "3.8"
hex = "0.4"
